Fix va-link wrapping

--- a/packages/web-components/src/components/va-link/va-link.scss
+++ b/packages/web-components/src/components/va-link/va-link.scss
@@ -65,7 +65,7 @@
 }
 
 .link--center {
-  display: inline-flex;
+  display: inline;
   align-items: center;
 }
 
